# fast_censor

./: .gitignore  LICENSE  MANIFEST.in  README.md  profanity_check_calc.pyx  profanity_check_trie.py  profanity_wordlist_encrypted.txt  pyproject.toml  requirements.txt  setup.py  timeit_profanity.py
fast_censor/: __init__.py  profanity_check_trie.py  wordlist_file_handler.py
fast_censor/word_lists/: clean_wordlist_decoded.txt  clean_wordlist_decrypted.txt  clean_wordlist_encrypted.txt  keyfile  locate.py  profanity_wordlist_encoded.txt  profanity_wordlist_encrypted.txt
notebooks/: timeit_profanity.py
tests/: test_encryption.py  test_filter.py
