[tool.poetry]
name = "fast-censor"
version = "0.1.0"
description = "an extremely fast and efficient package for finding and censoring words from text while allowing for variations, such as repeated characters and character substitutions"
authors = [ "Matt Buchovecky <mbuchove@gmail.com>" ]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "fast_censor" },
]
#include = []
#exclude = []

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "*"

[tool.poetry.dev.dependencies]
pytest = "^7"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mbuchove/fast-censor/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
